Fix alignment of translateIcon in navbar side menu

--- a/components/navbar/style.module.css
+++ b/components/navbar/style.module.css
@@ -56,7 +56,7 @@
 }
 
 .translateIcon {
-  margin-right: 8px;
+  margin-inline-end: 8px;
 }
 
 .toolbar svg {
